update deps; fix small js bugs

--- a/src/pug/components/hero.pug
+++ b/src/pug/components/hero.pug
@@ -9,7 +9,7 @@ mixin hero(value = {})
     article.layout-padding-dull-top.layout-contain-larger.layout-padding-horz-small
       .layer-hero
         div(class=_class)
-          +image(image)
+          +image(image).effect-parallax
 
           .layout-padding-horz-default--device-lt-tablet.layout-padding-horz-sub-large--device-lt-laptop.layout-padding-vert-extra-large--device-lt-tablet.layout-padding-vert-huge--device-gt-tablet.layout-enlarge-horz.layout-flex.layout-align-items-center
             .layer-content.layout-contain
