--- a/src/scss/components/transition.scss
+++ b/src/scss/components/transition.scss
@@ -1,7 +1,9 @@
+@use "./mixins.scss" as *;
+
 /*! purgecss start ignore */
 .transition {
     &-fade {
-        transition: opacity .3s ease-out;
+        transition: opacity 0.3s ease-out;
         opacity: 1;
 
         .is-animating & {
@@ -10,7 +12,7 @@
     }
 
     &-in-view {
-        transition: opacity .3s ease-out;
+        transition: opacity 0.3s ease-out;
         opacity: 1;
 
         .is-animating & {
@@ -18,7 +20,7 @@
         }
 
         @media #{$screen-size-gt-tablet} {
-            transition: opacity .3s ease-out, transform .3s ease-out;
+            transition: opacity 0.3s ease-out, transform 0.3s ease-out;
             transform: translate3d(0, 0, 0);
 
             .is-animating & {
