--- a/src/scss/components/layout.scss
+++ b/src/scss/components/layout.scss
@@ -1,3 +1,6 @@
+@use "sass:math";
+@use "./mixins.scss" as *;
+
 /*
     -- Layout (margin, padding, postion, shape, etc...) --
      * vert = vertical
@@ -487,7 +490,7 @@
 
         @for $i from 1 through 12 {
             &-#{$i} {
-                max-width: 100% / 12 * $i !important;
+                max-width: math.div(100%, 12) * $i !important;
 
                 @media (max-width: 750px) {
                     @if $i>=6 {
